restructure packages, remove demo application, and implement core library refactor.